Fixed spacing between grid

--- a/src/PathfindingVisualizer/Node/Node.css
+++ b/src/PathfindingVisualizer/Node/Node.css
@@ -2,8 +2,9 @@
   width: 1.5vw;
   height: 1.5vw;
   outline: 1px solid rgb(175, 216, 248);
+  box-sizing: border-box;
   display: inline-block;
-  vertical-align: top;
+  vertical-align: top; 
   padding: 0.1vw;
 }
 .node-svg {
