--- a/src/PathfindingVisualizer/PathfindingVisualizer.css
+++ b/src/PathfindingVisualizer/PathfindingVisualizer.css
@@ -1,11 +1,14 @@
 .grid {
-  margin: 6vh;
+  margin: 0;
+  font-size: 0;
+  white-space: nowrap;
 }
 .container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   width: 100%;
+  margin: 6vh;
 }
 .box {
   width: calc(20% - 2vw); /* 20% - 10px gutter */
